--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -3,169 +3,110 @@
 <head>
 <meta charset="UTF-8">
 <title>Ficha Técnica • CMV Profissional</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-:root{
-  --primary:#2563eb;
-  --bg:#eef2ff;
-  --card:#fff;
-  --text:#0f172a;
-}
-*{box-sizing:border-box}
 body{
   margin:0;
-  padding:18px;
-  background:linear-gradient(180deg,#eef2ff,#f8fafc);
+  padding:20px;
+  background:#eef2ff;
   font-family:Inter,Arial,sans-serif;
-  color:var(--text);
 }
 .container{
   max-width:1100px;
   margin:auto;
   background:#fff;
-  border-radius:30px;
+  border-radius:24px;
   padding:30px;
-  box-shadow:0 35px 80px rgba(0,0,0,.12);
-  position:relative;
+  box-shadow:0 30px 60px rgba(0,0,0,.12);
 }
-h1,h3{margin:0;font-weight:800}
-h1{margin-bottom:24px}
-h3{margin:26px 0 12px}
-label{font-size:13px;font-weight:800;margin-top:16px;display:block}
+label{font-weight:700;font-size:13px;margin-top:16px;display:block}
 input,select,button{
   width:100%;
-  padding:14px 16px;
-  border-radius:18px;
+  padding:14px;
+  border-radius:16px;
   border:1px solid #cbd5e1;
   margin-top:6px;
 }
 button{
-  background:linear-gradient(180deg,#2563eb,#1e40af);
+  background:#2563eb;
   color:#fff;
-  font-weight:800;
   border:none;
+  font-weight:800;
   cursor:pointer;
 }
 .lista .item{
   background:#f1f5f9;
-  padding:14px;
-  border-radius:16px;
+  padding:12px;
+  border-radius:12px;
   margin-top:6px;
   cursor:pointer;
 }
-.lista .item:hover{background:#e2e8f0}
-.badge{
-  display:inline-block;
-  margin-top:10px;
-  padding:8px 16px;
-  border-radius:999px;
-  background:#e0f2fe;
-  font-weight:800;
-  font-size:12px;
-}
-.grid{
-  display:grid;
-  grid-template-columns:2fr 1fr 1fr 1fr auto;
-  gap:8px;
-}
 .ing{
-  background:#f8fafc;
-  border-radius:14px;
-  padding:12px 16px;
-  margin-top:6px;
   display:flex;
   justify-content:space-between;
-}
-.kpis{
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:14px;
-  margin-top:26px;
-}
-.kpi{
   background:#f8fafc;
-  border-radius:20px;
-  padding:18px;
-  text-align:center;
-  font-weight:800;
+  padding:10px 14px;
+  border-radius:12px;
+  margin-top:6px;
 }
-.kpi span{display:block;margin-top:6px;font-size:18px}
 .preview{
   width:100%;
   max-height:220px;
   object-fit:cover;
-  border-radius:20px;
-  margin-top:12px;
+  border-radius:18px;
+  margin-top:10px;
 }
 .overlay{
-  position:absolute;
+  position:fixed;
   inset:0;
-  background:rgba(255,255,255,.75);
-  backdrop-filter:blur(2px);
+  background:rgba(255,255,255,.7);
   display:none;
   align-items:center;
   justify-content:center;
-  z-index:20;
-  border-radius:30px;
-}
-.overlay span{
-  font-size:18px;
   font-weight:800;
-  color:#2563eb;
+  font-size:18px;
+  z-index:999;
 }
 </style>
 </head>
 
 <body>
+
+<div class="overlay" id="overlay">Salvando…</div>
+
 <div class="container">
-
-<div id="overlay" class="overlay"><span>Carregando…</span></div>
-
 <h1>📋 Ficha Técnica</h1>
 
-<label>Produto (prato)</label>
-<input id="buscaProduto" placeholder="Digite o nome do produto">
+<label>Produto</label>
+<input id="buscaProduto">
 <div id="listaProduto" class="lista"></div>
-<div id="produtoBadge" class="badge" style="display:none"></div>
 
-<label>Foto do prato</label>
+<label>Foto</label>
 <input type="file" id="fotoProduto" accept="image/*">
 <img id="previewFoto" class="preview" style="display:none">
 
-<h3>🍳 Ingredientes</h3>
-
-<label>Buscar ingrediente</label>
-<input id="buscaIngrediente" placeholder="Digite o nome do ingrediente">
+<label>Ingrediente</label>
+<input id="buscaIngrediente">
 <div id="listaIngrediente" class="lista"></div>
-<div id="ingredienteBadge" class="badge" style="display:none"></div>
 
-<div class="grid">
-  <input id="qtd" type="number" step="0.001" placeholder="Qtd usada">
-  <select id="unUso">
-    <option>UN</option><option>KG</option><option>G</option><option>L</option><option>ML</option>
-  </select>
-  <input id="custo" readonly placeholder="Custo unit">
-  <input id="rend" type="number" placeholder="Rend %">
+<div style="display:grid;grid-template-columns:2fr 1fr 1fr 1fr auto;gap:6px">
+  <input id="qtd" type="number" step="0.001" placeholder="Qtd">
+  <select id="unUso"><option>UN</option><option>KG</option><option>G</option></select>
+  <input id="custo" readonly placeholder="Custo">
+  <input id="rend" placeholder="Rend %">
   <button onclick="addIngrediente()">+</button>
 </div>
 
 <div id="listaIng"></div>
 
-<label>Rendimento final (porções)</label>
-<input id="rendimentoFinal" type="number" value="1" min="1" oninput="render()">
+<label>Porções</label>
+<input id="rendimentoFinal" value="1" type="number" oninput="render()">
 
-<div class="kpis">
-  <div class="kpi">CMV Total<span id="cmvTotal">R$ 0,00</span></div>
-  <div class="kpi">CMV Unit<span id="cmvUnit">R$ 0,00</span></div>
-  <div class="kpi">Preço Venda<span id="precoVenda">—</span></div>
-  <div class="kpi">Margem<span id="margem">—</span></div>
-</div>
-
-<button onclick="salvar()" style="margin-top:28px">Salvar Ficha Técnica</button>
+<button onclick="salvar()" style="margin-top:20px">SALVAR</button>
 </div>
 
 <script>
@@ -173,24 +114,17 @@ const sb = supabase.createClient(
   "https://dsngsuetvucxeztbgbtb.supabase.co",
   "sb_publishable_rN6fZXNxnjgwnbXTPXEP5A_7n5Ty9Cp"
 );
-// 🔑 AUTH ANÔNIMO (ESSENCIAL)
-(async () => {
-  const { data, error } = await sb.auth.signInAnonymously();
-  if (error) {
-    console.error("Erro auth anon:", error);
-  }
-})();
-let produto=null;
-let ingrediente=null;
-let ingredientes=[];
-let debounce=null;
 
-const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
-const overlay=document.getElementById("overlay");
-const show=()=>overlay.style.display="flex";
-const hide=()=>overlay.style.display="none";
+// AUTH ANÔNIMO
+sb.auth.signInAnonymously();
 
-/* FOTO */
+const overlay = document.getElementById("overlay");
+const show = ()=>overlay.style.display="flex";
+const hide = ()=>overlay.style.display="none";
+
+let produto=null, ingrediente=null, ingredientes=[];
+
+// FOTO
 fotoProduto.onchange=()=>{
   const f=fotoProduto.files[0];
   if(!f)return;
@@ -198,166 +132,107 @@ fotoProduto.onchange=()=>{
   previewFoto.style.display="block";
 };
 
-/* BUSCA PRODUTO */
-buscaProduto.oninput=()=>{
-  clearTimeout(debounce);
-  const termo=buscaProduto.value.trim();
-  if(termo.length<3){ listaProduto.innerHTML=""; return; }
-
-  debounce=setTimeout(async()=>{
-    const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(termo)}`);
-    const j=await r.json();
-    listaProduto.innerHTML=j.items.map(p=>`
-      <div class="item" onclick="selectProduto(${p.id},'${p.descricao.replace(/'/g,"")}')">
-        ${p.descricao}
-      </div>`).join("");
-  },300);
+// BUSCA PRODUTO
+buscaProduto.oninput=async()=>{
+  if(buscaProduto.value.length<3)return;
+  const r=await fetch(`/api/produtos-busca?q=${buscaProduto.value}`);
+  const j=await r.json();
+  listaProduto.innerHTML=j.items.map(p=>`
+    <div class="item" onclick="selectProduto(${p.id},'${p.descricao.replace(/'/g,"")}')">
+      ${p.descricao}
+    </div>`).join("");
 };
 
 async function selectProduto(id,nome){
-  show();
   const r=await fetch(`/api/produto-preco/${id}`);
   const j=await r.json();
   const p=j.items?.[0]||j[0]||{};
-  produto={id,nome,preco:Number(p.precoVenda1||p.precoVenda||0)};
-  produtoBadge.style.display="inline-block";
-  produtoBadge.textContent=`${nome} • ${moeda(produto.preco)}`;
-  precoVenda.textContent=moeda(produto.preco);
-  listaProduto.innerHTML="";
-  hide();
-  render();
+  produto={id,nome,preco:Number(p.precoVenda1||0)};
+  listaProduto.innerHTML=`<b>${nome}</b>`;
 }
 
-/* INGREDIENTE */
-buscaIngrediente.oninput=()=>{
-  clearTimeout(debounce);
-  const termo=buscaIngrediente.value.trim();
-  if(termo.length<3){ listaIngrediente.innerHTML=""; return; }
-
-  debounce=setTimeout(async()=>{
-    const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(termo)}`);
-    const j=await r.json();
-    listaIngrediente.innerHTML=j.items.map(p=>`
-      <div class="item" onclick="selectIng(${p.id},'${p.descricao.replace(/'/g,"")}')">
-        ${p.descricao}
-      </div>`).join("");
-  },300);
+// BUSCA INGREDIENTE
+buscaIngrediente.oninput=async()=>{
+  if(buscaIngrediente.value.length<3)return;
+  const r=await fetch(`/api/produtos-busca?q=${buscaIngrediente.value}`);
+  const j=await r.json();
+  listaIngrediente.innerHTML=j.items.map(p=>`
+    <div class="item" onclick="selectIng(${p.id},'${p.descricao.replace(/'/g,"")}')">
+      ${p.descricao}
+    </div>`).join("");
 };
 
 async function selectIng(id,nome){
-  show();
   const r=await fetch(`/api/produto-preco/${id}`);
   const j=await r.json();
   const p=j.items?.[0]||j[0]||{};
   ingrediente={nome,custo:Number(p.precoMedioDeReposicao||p.custoProduto||0)};
-  ingredienteBadge.style.display="inline-block";
-  ingredienteBadge.textContent=nome;
   custo.value=ingrediente.custo.toFixed(4);
-  listaIngrediente.innerHTML="";
-  hide();
 }
 
-/* ADD INGREDIENTE */
+// ADD
 function addIngrediente(){
   if(!ingrediente||!qtd.value)return;
-
-  const rendimento=(rend.value||100)/100;
-  const total=qtd.value*ingrediente.custo*rendimento;
-
-  ingredientes.push({
-    nome:ingrediente.nome,
-    quantidade:Number(qtd.value),
-    unidade:unUso.value,
-    custo_unitario:ingrediente.custo,
-    custo_total:total,
-    rendimento_percentual:rend.value||100
-  });
-
-  qtd.value=""; rend.value="";
+  const total=qtd.value*ingrediente.custo*((rend.value||100)/100);
+  ingredientes.push({nome:ingrediente.nome,quantidade:qtd.value,un:unUso.value,total});
   ingrediente=null;
-  ingredienteBadge.style.display="none";
+  qtd.value="";rend.value="";
   render();
 }
 
-/* RENDER */
 function render(){
-  const cmv=ingredientes.reduce((s,i)=>s+i.custo_total,0);
   listaIng.innerHTML=ingredientes.map(i=>`
-    <div class="ing">
-      <span>${i.nome} (${i.quantidade} ${i.unidade})</span>
-      <strong>${moeda(i.custo_total)}</strong>
-    </div>
+    <div class="ing"><span>${i.nome}</span><b>R$ ${i.total.toFixed(2)}</b></div>
   `).join("");
-
-  const porcoes=rendimentoFinal.value||1;
-  cmvTotal.textContent=moeda(cmv);
-  cmvUnit.textContent=moeda(cmv/porcoes);
-  margem.textContent=produto?.preco
-    ?(((produto.preco-(cmv/porcoes))/produto.preco)*100).toFixed(1)+"%"
-    :"—";
 }
 
-/* SALVAR */
+// SALVAR
 async function salvar(){
-  if(!produto||!ingredientes.length){
-    alert("Produto e ingredientes são obrigatórios");
-    return;
-  }
-
+  if(!produto||!ingredientes.length)return alert("Dados incompletos");
   show();
 
   let fotoUrl=null;
   if(fotoProduto.files[0]){
     const file=fotoProduto.files[0];
-const safeName = file.name
-  .normalize("NFD")
-  .replace(/[\u0300-\u036f]/g, "")
-  .replace(/[^a-zA-Z0-9._-]/g, "_");
+    const safe=file.name.normalize("NFD").replace(/[\u0300-\u036f]/g,"").replace(/[^a-zA-Z0-9._-]/g,"_");
+    const path=`fichas/${Date.now()}-${safe}`;
 
-const path = `fichas/${Date.now()}-${safeName}`;
-    const up=await sb.storage.from("buffet").upload(path, file, {
-  contentType: file.type,
-  upsert: false
-});
-
-    if(up.error){ hide(); alert("Erro imagem"); return; }
+    const {error}=await sb.storage.from("buffet").upload(path,file,{
+      contentType:file.type,
+      upsert:false
+    });
+    if(error){hide();alert(error.message);return;}
     fotoUrl=sb.storage.from("buffet").getPublicUrl(path).data.publicUrl;
   }
 
-  const cmv=ingredientes.reduce((s,i)=>s+i.custo_total,0);
-  const porcoes=rendimentoFinal.value||1;
+  const cmv=ingredientes.reduce((s,i)=>s+i.total,0);
+  const por=rendimentoFinal.value||1;
 
-  const { data, error } = await sb
-    .from("buffet")
-    .insert({
-      produto_id: produto.id,
-      nome: produto.nome,
-      preco_venda: produto.preco,
-      custo_total: cmv,
-      custo_unitario: cmv/porcoes,
-      margem_percentual: produto.preco?((produto.preco-(cmv/porcoes))/produto.preco)*100:null,
-      rendimento: porcoes,
-      foto_url: fotoUrl
-    })
-    .select()
-    .single();
+  const {data,error}=await sb.from("buffet").insert({
+    produto_id:produto.id,
+    nome:produto.nome,
+    preco_venda:produto.preco,
+    custo_total:cmv,
+    custo_unitario:cmv/por,
+    rendimento:por,
+    foto_url:fotoUrl
+  }).select().single();
 
-  if(error){ hide(); alert("Erro ao salvar ficha"); return; }
+  if(error){hide();alert(error.message);return;}
 
   for(const i of ingredientes){
     await sb.from("buffet_itens").insert({
       buffet_id:data.id,
       nome:i.nome,
-      unidade_uso:i.unidade,
+      unidade_uso:i.un,
       quantidade:i.quantidade,
-      custo_unitario:i.custo_unitario,
-      custo_calculado:i.custo_total,
-      rendimento_percentual:i.rendimento_percentual
+      custo_unitario:0,
+      custo_calculado:i.total
     });
   }
 
   hide();
-  alert("Ficha técnica salva com sucesso!");
+  alert("SALVO");
   location.reload();
 }
 </script>
